# Face-verification-service

./: .flake8  .gitlab-ci.yml  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/app/: Dockerfile
face_verification_chart/: .helmignore  Chart.yaml  values.yaml
face_verification_chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml
kuber/: deployment-face-verification.yaml  ingress-face-verification.yaml  job-migrate-database.yaml  service-face-verification.yaml
migrations/: env.py
migrations/versions/: fafae8746bb4_initial_commit.py
src/app/: consumer.py  database.py  face_verification.py  face_verification_service.py  main.py  models.py  routers.py
src/tests/: test_consumer.py  test_face_verification.py
