[tool.poetry]
name = "workspace"
version = "0.1.0"
description = ""
authors = ["Irina Ivashko <ira.ivashko.99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tf-keras = "^2.16.0"
tensorflow = "^2.16.2"
deepface = "^0.0.92"
pytest-mock = "^3.14.0"
fastapi = "^0.111.1"

[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.19.2"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
